# jarcy-messanager

./: .gitignore
backend/: go.mod  go.sum
backend/auth-service/: sqlc.yaml
backend/auth-service/cmd/server/: main.go
backend/auth-service/internal/config/: config.go
backend/auth-service/internal/database/: postgres.go
backend/auth-service/internal/database/queries/: models.go  users.sql.go
backend/auth-service/internal/repository/: service-repo.go
backend/auth-service/internal/service/: service.go
backend/auth-service/sql/queries/: users.sql
backend/auth-service/sql/schema/: 000001_create_users_table.up.sql
backend/proto/auth/: auth.proto
desktop/: CMakeLists.txt
desktop/src/: main.cpp
desktop/src/auth/: Auth.cpp  Auth.hpp
desktop/src/core/: Application.cpp  Application.hpp
